<resources>
    <string name="app_name">Triage</string>
    <string name="triage">TRIAGE</string>
    <string name="chiron_data_analyst">CHIRON DATA ANALYST</string>
    <string name="setup_configuration">Setup Configuration</string>
    <string name="let_s_get_wired_up">Let&#8217;s get wired up!</string>
    <string name="email">Email</string>
    <string name="api_base_url">API Base URL</string>
    <string name="proceed">PROCEED</string>
    <string name="learn_more">Learn More?</string>
    <string name="_2022_meka_egwim">©2022 MEKA EGWIM</string>
    <string name="chiron">CHIRON</string>
    <string name="enter_valid_chironid_or_email">Enter valid ChironID™ or email</string>
    <string name="enter_chiron_server_ip_address_or_url">Enter Chiron Server™ IP address or URL</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">e</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="_5">5</string>
    <string name="pivot_definition_i">PIVOT DEFINITION I</string>
    <string name="pivot_definition_ii">PIVOT DEFINITION II</string>
    <string name="pivot_definition_iii">PIVOT DEFINITION III</string>
    <string name="emeka_egwim">EMEKA EGWIM</string>
    <string name="developer_logo">developer_logo</string>
    <string name="info_card">Info Card</string>
    <string name="patient_name">PATIENT NAME</string>
    <string name="blood_group">BLOOD GROUP</string>
    <string name="o">O-</string>
    <string name="diagnoses">DIAGNOSES</string>
    <string name="_10">10</string>
    <string name="dr">DR.</string>
    <string name="practitioner_name">PRACTITIONER NAME</string>
    <string name="practitioner_id">PRACTITIONER ID</string>
    <string name="info_contact_com">info@contact.com</string>
    <string name="diagnoses_found">DIAGNOSES ENTRIES</string>
    <string name="md">MD.</string>
    <string name="md_title">MD</string>
    <string name="np">NP.</string>
    <string name="rn">RN.</string>
    <string name="synopsis">SYNOPSIS</string>
    <string name="diagnosis_level">DIAGNOSIS LEVEL</string>
    <string name="examination_date">EXAMINATION DATE</string>
    <string name="patient_visits">PATIENT VISITS</string>
    <string name="prescription_name">PRESCRIPTION NAME</string>
    <string name="weeks">WEEKS</string>
    <string name="prescription_date">PRESCRIPTION DATE</string>
    <string name="prescriber">PRESCRIBER</string>
    <string name="patient_visit_logs">PATIENT VISIT LOGS</string>
    <string name="manufacturer_name">MANUFACTURER NAME</string>
    <string name="manufacturer">MANUFACTURER</string>
    <string name="pharmaceutical_name">PHARMACEUTICAL NAME</string>
    <string name="expiry_date">EXPIRY DATE</string>
    <string name="manufacture_date">MANUFACTURE DATE</string>
    <string name="diagnosis">DIAGNOSIS</string>
    <string name="host_practitioner">HOST PRACTITIONER</string>
    <string name="infectious">INFECTIOUS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry_ip">Try a different URL or IP address</string>
    <string name="buffer_text_pass">API Server Unavailable</string>
    <string name="buffer_text_fail">Oh Shit…Server Unavailable</string>
    <string name="chironquickaction">chironQuickAction</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="insights">INSIGHTS</string>
    <string name="pivots">QUICK PIVOTS</string>
    <string name="chiron_records">CHIRON RECORDS</string>
    <string name="search">Search</string>
    <string name="chiron_web">Chiron Web</string>
    <string name="dummy_time_string">As at 27 April, 2021</string>
    <string name="triage_is_a_chiron_api_data_analysis_app">Triage is a Chiron API data pivot &amp; analysis app</string>
    <string name="hello_user_name">Hello, User.Name!</string>
    <string name="launch_chiron_web">Launch Chiron</string>
    <string name="about_chiron">About Chiron</string>
    <string name="about_triage">About Triage</string>
    <string name="about_me">About ME</string>
    <string name="user_name_holder">user.name</string>
    <string name="chiron_api_title">CHIRON API</string>
    <string name="chiron_server_url">www.chirondemo.ca</string>
    <string name="chiron_user_timezone_holder">Mountain Standard Time</string>
    <string name="logo">Chiron Logo</string>
    <string name="dashboard">Dashboard</string>
    <string name="insights_hub">Insights</string>
    <string name="pivots_hub">Pivots</string>
    <string name="settings_hub">Settings</string>
    <string name="medical_practice_management_system">Medical Practice Management System</string>
    <string name="chiron_info_text">Chiron is a compact medical practice management enterprise web application with the objective functionality of managing the day to day operations of a small-scale or remote clinic - such as patient management, pharmaceuticals inventory and other vital administrative tasks.</string>
    <string name="triage_info_text">Triage is a data pivot and analysis tool designed as a complimentary mobile application to sort, filter, pivot and evaluate data sourced from a cloud hosted Chiron web app instance via a RESTful API</string>
    <string name="server_credentials">API SERVER CREDENTIALS</string>
    <string name="signature_holder">SIGNATURE:</string>
    <string name="local_host_holder">LOCAL HOST:</string>
    <string name="online_holder">Online</string>
    <string name="learn_more_text">Learn More</string>
    <string name="spring_boot">Spring Boot</string>
    <string name="close">Close</string>
    <string name="jakarta_ee">Jakarta EE</string>
    <string name="kotlin">Kotlin</string>
    <string name="android_jetpack">Android Jetpack</string>
    <string name="uuid">UUID</string>
    <string name="this_is_a_demo_uuid">THIS IS A DEMO UUID</string>
    <string name="me_text">ME</string>
    <string name="meka_egwim">MEKA EGWIM</string>
    <string name="designer_developer"><![CDATA[<DESIGNER/DEVELOPER>]]></string>
    <string name="instagram_text">Instagram</string>
    <string name="email_text">Email</string>
    <string name="linkedin_text">LinkedIn</string>
    <string name="me_ca_text">ME.ca</string>
    <string name="phone_me">Phone ME</string>
    <string name="no_data_pivots_found">No Data Pivots Found</string>
    <string name="no_records_found">No Records Found</string>
    <string name="no_insight_models_found">No Insight Models Found</string>
    <string name="no_insight_data_found">No Insight Data Found</string>
    <string name="data_pivots">PIVOTS</string>
    <string name="patients">Patients</string>
    <string name="patient">Patient</string>
    <string name="prescription">Prescription</string>
    <string name="record_type_holder">Files</string>
    <string name="records_type_holder">Records</string>
    <string name="emeka_egwim_text">Emeka Egwim</string>
    <string name="chrome">Chrome</string>
    <string name="_10000">10000</string>
    <string name="insight_n_models">INSIGHT MODELS</string>
    <string name="insight_n_model">INSIGHT MODEL</string>
    <string name="data_n_pivots">DATA PIVOTS</string>
    <string name="data_n_pivot">DATA PIVOT</string>
    <string name="_23">23</string>
    <string name="nurse_practitioners">Nurse Practitioners</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="create">CREATE</string>
    <string name="pivot_label">Pivot Label</string>
    <string name="enter_pivot_label">Pivot Label/Alias</string>
    <string name="entity_type">Data Model</string>
    <string name="entity_types">Data Models</string>
    <string name="visit">Visit</string>
    <string name="pharmaceutical">Pharmaceutical</string>
    <string name="practitioner_s">Practitioner(s)</string>
    <string name="patient_endpoints">Patient Endpoints</string>
    <string name="last_name">Last Name</string>
    <string name="insurer">Insurer</string>
    <string name="blood__group">Blood Group</string>
    <string name="visit_date">Visit Date</string>
    <string name="birth_date">Birth Date</string>
    <string name="diagnosis_date">Diagnosis Date</string>
    <string name="insurer_id">Insurer ID</string>
    <string name="level">Level</string>
    <string name="diagnosis_endpoints">Diagnosis Endpoints</string>
    <string name="synopsis_lc">Synopsis</string>
    <string name="prescription_endpoints">Prescription Endpoints</string>
    <string name="prescriber_lc">Prescriber</string>
    <string name="prescriber_id">Prescriber ID</string>
    <string name="rx_date">Rx Date</string>
    <string name="prescription_date_sc">Prescription Date</string>
    <string name="visit_endpoints">Visit Endpoints</string>
    <string name="visit_time">Visit Time</string>
    <string name="host_id">Host ID</string>
    <string name="host">Host</string>
    <string name="description">Description</string>
    <string name="pharmaceutical_endpoints">Pharmaceutical Endpoints</string>
    <string name="brand">Brand</string>
    <string name="generic">Generic</string>
    <string name="chemical">Chemical</string>
    <string name="manufacturer_lc">Manufacturer</string>
    <string name="make_date">Make Date</string>
    <string name="expire_date">Expiry Date</string>
    <string name="entity_option">Practitioner Option(s)</string>
    <string name="practitioner">Practitioner</string>
    <string name="doctor">Doctor</string>
    <string name="nurse_practitioner">Nurse Practitioner</string>
    <string name="registered_nurse">Registered Nurse</string>
    <string name="practitioner_endpoints">Practitioner Endpoints</string>
    <string name="practitionerid">Practitioner ID</string>
    <string name="first_name">First Name</string>
    <string name="parameters">Parameters</string>
    <string name="date_parameters">Date Parameters</string>
    <string name="alpha_value">Alpha Value</string>
    <string name="beta_value">Beta Value</string>
    <string name="epsilon_value">Epsilon Value</string>
    <string name="time_stream">Time Stream</string>
    <string name="on">On</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="between">Between</string>
    <string name="create_pivot">CREATE PIVOT</string>
    <string name="diagnosis_uc">Diagnosis</string>
    <string name="general_practitioner">General Practitioner</string>
    <string name="endpoint_type">Endpoint Type</string>
    <string name="date_endpoint_type">Date Endpoint Type</string>
    <string name="criterion">Pivot Criterion</string>
    <string name="practitioner_n_endpoints">PRACTITIONER ENDPOINTS</string>
    <string name="rx_endpoints">Rx Endpoints</string>
    <string name="data_vistas">Data Vistas</string>
    <string name="data_vista">Vista Type</string>
    <string name="histogram">Histogram</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="line_chart">Line Chart</string>
    <string name="scatter_plot">Scatter Plot</string>
    <string name="pivot_loader">Pivot Loader</string>
    <string name="pivoting_data">Pivoting Data...</string>
    <string name="rendering_data">Rendering Data...</string>
    <string name="data_model">DATA MODEL</string>
    <string name="api_end_point">API END POINT</string>
    <string name="brand_name">Brand Name</string>
    <string name="pivot_type">PIVOT TYPE</string>
    <string name="value_based">Value Based</string>
</resources>