<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/triage_tinted_background"
    android:layout_height="250dp">

    <ImageView
        android:id="@+id/chiron_side_logo"
        android:layout_marginStart="6dp"
        android:src="@drawable/chironlogo500"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/chiron_id_sidemenu"
        android:layout_marginStart="6dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@id/chiron_side_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text="@string/user_name_holder"
        android:fontFamily="@font/montserratregular"
        android:textColor="@color/white"
         />

    <TextView
        android:id="@+id/chiron_server_info_title_sm"
        android:layout_marginStart="6dp"
        app:layout_constraintTop_toBottomOf="@id/chiron_id_sidemenu"
        android:layout_marginTop="9dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:letterSpacing="0.20"
        android:textSize="12sp"
        android:text="@string/chiron_api_title"
        android:textColor="@color/white"
        android:lines="1"
        android:fontFamily="@font/montserratbold"
        />

    <TextView
        android:id="@+id/chiron_serverinfo_sidemenu"
        android:layout_marginStart="6dp"
        app:layout_constraintTop_toBottomOf="@id/chiron_server_info_title_sm"
        android:layout_marginTop="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:letterSpacing="0.20"
        android:textSize="12sp"
        android:text="@string/chiron_server_url"
        android:textColor="@color/white"
        android:maxLines="2"
        android:textStyle="bold"
        android:fontFamily="@font/montserratlight"
        />

    <TextView
        android:id="@+id/triage_timezone_sidemenu"
        android:layout_marginStart="6dp"
        app:layout_constraintTop_toBottomOf="@id/chiron_serverinfo_sidemenu"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:letterSpacing="0.20"
        android:textSize="12sp"
        android:text="@string/chiron_user_timezone_holder"
        android:textColor="@color/white"
        android:maxLines="2"
        android:textStyle="bold"
        android:fontFamily="@font/montserratthin"
        />






</androidx.constraintlayout.widget.ConstraintLayout>