<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chiron_info_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ChironInfoActivity">




        <ImageView
            android:padding="3dp"
            android:id="@+id/chiron_info_close"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="21dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/chiron_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="69dp"
            android:layout_marginRight="3dp"
            android:letterSpacing="0.44"
            android:text="@string/chiron"
            android:textColor="@color/chiron_blue"
            android:textSize="48sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserratbold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/chiron_info_subtitle"
            android:fontFamily="@font/montserratregular"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:letterSpacing="0.12"
            app:layout_constraintTop_toBottomOf="@id/chiron_info_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/medical_practice_management_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/chiron_tools_layout"
            android:padding="13dp"
            android:layout_marginTop="44dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/chiron_info_subtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/spring_boot"
                android:scaleType="fitXY"
                android:id="@+id/chiron_tool_spring"
                android:layout_marginEnd="33dp"
                android:src="@drawable/springboot_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"/>


            <ImageView
                android:contentDescription="@string/jakarta_ee"
                android:scaleType="fitXY"
                android:id="@+id/chiron_tool_jakarta"
                android:layout_marginStart="33dp"
                android:src="@drawable/jakarta_ee_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"/>


        </LinearLayout>


        <TextView
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/chiron_info_text"
            android:letterSpacing="0.12"
            android:fontFamily="@font/montserratregular"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/chiron_grey"
            android:lines="6"
            android:textAlignment="center"
            android:layout_marginTop="33dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chiron_tools_layout"
            android:id="@+id/chiron_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <!---cView-->

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="5dp"
            android:background="?android:selectableItemBackground"
            android:layout_marginTop="23dp"
            android:elevation="33dp"
            app:layout_constraintTop_toBottomOf="@id/chiron_info_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/server_credentials_card"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="3dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/server_credentials"
                    android:textSize="14sp"
                    android:letterSpacing="0.12"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chiron_info_text"
                    android:fontFamily="@font/montserratbold"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginStart="6dp"
                    android:text="@string/server_credentials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/server_status"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/server_credentials"
                    android:fontFamily="@font/montserratlight"
                    android:textColor="@color/chiron_red"
                    android:textStyle="bold"
                    android:layout_marginTop="9dp"
                    android:layout_marginStart="6dp"
                    android:text="@string/online_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/server_localhost"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/server_status"
                    android:fontFamily="@font/montserratregular"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:lines="2"
                    android:layout_marginTop="9dp"
                    android:layout_marginStart="6dp"
                    android:text="@string/local_host_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/server_signature"
                    android:textSize="12sp"
                    android:lines="2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/server_localhost"
                    android:fontFamily="@font/montserratregular"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="6dp"
                    android:text="@string/signature_holder"
                    android:layout_marginBottom="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <!---cView-->
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:theme="@style/InfoButtonTheme"
            android:id="@+id/chiron_info_button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="41dp"
            android:layout_marginBottom="41dp"
            android:paddingTop="13dp"
            android:paddingBottom="23dp"
            android:text="@string/learn_more_text"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:letterSpacing="0.12"
            android:fontFamily="@font/montserratbold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/server_credentials_card"
            />






    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
